--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
   "name": "auto-suggest-component",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "An auto-suggest component for Angular.js",
-  "main": "auto-suggest-component.js",
+  "main": "dist/auto-suggest-component.min.js",
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-connect": "^2.2.0",
+    "gulp-htmlmin": "^1.1.3",
+    "gulp-jasmine": "^2.0.1",
     "gulp-jshint": "^1.11.2",
     "gulp-karma": "^0.0.4",
-    "jasmine-core": "^2.3.4",
-    "karma-chrome-launcher": "^0.2.0",
-    "karma": "^0.13.2",
-    "karma-jasmine": "^0.3.6",
-    "gulp-jasmine": "^2.0.1",
     "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.5.4",
     "gulp-uglify": "^1.2.0",
+    "jasmine-core": "^2.3.4",
+    "karma": "^0.13.2",
+    "karma-chrome-launcher": "^0.2.0",
+    "karma-jasmine": "^0.3.6",
     "karma-ng-html2js-preprocessor": "^0.1.2"
   },
   "scripts": {
